feat(java): 基础能力完善
1